// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginLayout renders correctly 1`] = `
<div
  class="css-wrxed4"
>
  <div
    class="MuiGrid-root MuiGrid-container css-vzz4uh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 MuiGrid-grid-md-10 css-sn9kgx-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-10yvctz"
      >
        <img
          alt="logo"
          src="bg-portrait-black.jpg"
        />
      </div>
      <div
        class="css-nsi0op"
      />
    </div>
  </div>
</div>
`;

exports[`LoginLayout renders correctly with children 1`] = `
<div
  class="css-wrxed4"
>
  <div
    class="MuiGrid-root MuiGrid-container css-vzz4uh-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 MuiGrid-grid-md-10 css-sn9kgx-MuiGrid-root"
    >
      <div
        class="MuiBox-root css-10yvctz"
      >
        <img
          alt="logo"
          src="bg-portrait-black.jpg"
        />
      </div>
      <div
        class="css-nsi0op"
      >
        <div>
          test-content
        </div>
      </div>
    </div>
  </div>
</div>
`;
